change to server

--- a/bulesim-rlib/Cargo.toml
+++ b/bulesim-rlib/Cargo.toml
@@ -10,3 +10,5 @@ crate-type = ["staticlib"]
 name = "blue"
 
 [dependencies]
+serde = { version = "1.0.201", features = ["derive"] }
+bincode = "1.3.3"
