--- a/rb_link/Cargo.toml
+++ b/rb_link/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "rb-link"
+name = "rb_link"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nix = { version = "0.28.0", features = ["fs"] }
+serde = { version = "1.0.201", features = ["derive"] }
+bincode = "1.3.3"
