--- a/bulesim-rlib/Cargo.toml
+++ b/bulesim-rlib/Cargo.toml
@@ -10,5 +10,5 @@ crate-type = ["staticlib"]
 name = "blue"
 
 [dependencies]
-serde = { version = "1.0.201", features = ["derive"] }
+rb_link = { path = "../rb_link" }
 bincode = "1.3.3"
