--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,5 +79,5 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: Cargo test rb_link
-        run: cd rb_link && cargo test -- --test-threads=1
+        run: cd rb_link && cargo test
 
